[gd_scene load_steps=13 format=3 uid="uid://clii77i2i7chj"]

[ext_resource type="Script" uid="uid://rjg6jd7gkrve" path="res://Scripts/pause_menu.gd" id="1_k0w1u"]
[ext_resource type="FontFile" uid="uid://bofu0ilca3a26" path="res://Assets/fonts/Peaberry-Font-v2.0/Peaberry Font Family/Peaberry Base/PeaberryBase.ttf" id="2_1och7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpi0q"]
bg_color = Color(0.98039216, 0.7529412, 0.49803922, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k0w1u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1och7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u8tnp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myy0f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bpi0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_stj27"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sjs17"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vmyb1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ix48p"]

[node name="pause_menu" type="CanvasLayer" groups=["pause_menu"]]
process_mode = 2
script = ExtResource("1_k0w1u")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.45882353, 0.45882353, 0.45882353, 0.60784316)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_direction = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.125
anchor_right = 0.875
anchor_bottom = 0.875
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bpi0q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.341
anchor_top = 0.525
anchor_right = 0.645
anchor_bottom = 0.775
offset_top = -170.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 80
text = "PAUSED"

[node name="continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_k0w1u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1och7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_u8tnp")
text = "Continue"

[node name="save" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_myy0f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bpi0q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_stj27")
text = "Save Game"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_sjs17")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vmyb1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ix48p")
text = "Close"

[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
